arcade/k8s-deployment/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: arcade
  labels:
    name: arcade
