arcade/k8s-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcade
  namespace: arcade
spec:  
  replicas: 1
  selector:
      matchLabels:
        app: arcade
  template:
    metadata:
      labels:
        app: arcade
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: pacman
        image: registry/arcade/pacman:latest
        ports:
        - containerPort: 8080
          name: http
        imagePullPolicy: Always
