arcade/k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman-service
  namespace: arcade
  labels:
    app: arcade
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: arcade
